feat: 统一品牌名称为PaYphp并更新相关文档
更新项目中的品牌名称从PayPHP/Payphp统一为PaYphp，包括：
- 所有文档、脚本、配置文件中出现的品牌名称
- 组件和页面中的品牌引用
- 相关链接和路径
- 新增@headlessui/react和@heroicons/react依赖
- 优化部分UI组件样式和交互

--- a/markdown/blog/1.mdx
+++ b/markdown/blog/1.mdx
@@ -2,7 +2,7 @@
 title: "连接交易与信任的数字桥梁"
 description: "在数字经济蓬勃发展的当下，支付系统如同一条无形的纽带，串联起商家与消费者"
 date: "2024-01-15"
-author: "payphp"
+author: "PaYphp"
 category: "支付系统"
 tags: ["支付", "交易", "信任", "数字桥梁"]
 image: "/images/blog/blog-03.png"
