--- a/markdown/docs/2.mdx
+++ b/markdown/docs/2.mdx
@@ -1,7 +1,7 @@
 ---
 # 页面元数据配置
 title: "系统安装" # 页面标题
-description: "5分钟快速上手payphp支付系统" # 页面描述
+description: "5分钟快速上手PaYphp支付系统" # 页面描述
 date: "2024-01-19" # 最后更新日期
 category: "系统介绍" # 文档分类
 subcategory: "" # 文档子分类
