--- a/markdown/docs/3.mdx
+++ b/markdown/docs/3.mdx
@@ -11,9 +11,9 @@ icon: "" # 文档图标
 
 # 系统简介 
 
-## 什么是 Payphp码支付？
+## 什么是 PaYphp码支付？
 
-Payphp码支付是一款**专为个人站长打造的聚合免签支付系统**，具有以下特点：
+PaYphp码支付是一款**专为个人站长打造的聚合免签支付系统**，具有以下特点：
 
 - 🚀 卓越的性能和丰富的功能
 - 💡 全新轻量化的界面UI设计
