--- a/markdown/docs/basic.mdx
+++ b/markdown/docs/basic.mdx
@@ -1,6 +1,6 @@
 ---
 title: "基础功能"
-description: "PayPHP码支付系统基础功能使用指南"
+description: "PaYphp码支付系统基础功能使用指南"
 date: "2024-01-19"
 category: "使用指南"
 subcategory: "基础功能"
@@ -8,9 +8,9 @@ order: 1
 icon: "📋"
 ---
 
-# PayPHP 码支付系统基础功能
+# PaYphp 码支付系统基础功能
 
-本节将详细介绍 PayPHP 码支付系统的基础功能，帮助您了解系统的核心功能和日常操作。
+本节将详细介绍 PaYphp 码支付系统的基础功能，帮助您了解系统的核心功能和日常操作。
 
 ## 控制面板
 
