--- a/markdown/docs/installation.mdx
+++ b/markdown/docs/installation.mdx
@@ -1,7 +1,7 @@
 ---
 # 页面元数据配置
 title: "系统安装" # 页面标题
-description: "5分钟快速上手payphp支付系统" # 页面描述
+description: "5分钟快速上手PaYphp支付系统" # 页面描述
 date: "2024-01-19" # 最后更新日期
 category: "安装配置" # 文档分类
 subcategory: "安装步骤" # 文档子分类
@@ -13,7 +13,7 @@ icon: "📦" # 文档图标
 
 ## 系统环境要求
 
-在安装 PayPHP 码支付系统前，请确保您的服务器满足以下要求：
+在安装 PaYphp 码支付系统前，请确保您的服务器满足以下要求：
 
 * **服务器配置**：推荐 2核2G 或更高配置
 * **PHP 版本**：8.0 或更高版本
@@ -39,7 +39,7 @@ icon: "📦" # 文档图标
 
 ### 2. 下载安装包
 
-1. 从官方渠道获取 PayPHP 码支付系统安装包
+1. 从官方渠道获取 PaYphp 码支付系统安装包
 2. 解压安装包到本地
 
 ### 3. 上传文件
