--- a/markdown/docs/user-guide.mdx
+++ b/markdown/docs/user-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: "使用指南"
-description: "PayPHP码支付系统使用指南"
+description: "PaYphp码支付系统使用指南"
 date: "2024-01-16"
 category: "使用指南"
 subcategory: "基础功能"
@@ -8,13 +8,13 @@ order: 1
 icon: "📋"
 ---
 
-# PayPHP 码支付系统使用指南
+# PaYphp 码支付系统使用指南
 
-本节将详细介绍 PayPHP 码支付系统的使用方法，帮助您充分利用系统的各项功能。
+本节将详细介绍 PaYphp 码支付系统的使用方法，帮助您充分利用系统的各项功能。
 
 ## 使用指南概述
 
-PayPHP 码支付系统提供了丰富的功能，包括支付管理、订单管理、商户管理、统计报表等。本指南将帮助您了解如何使用这些功能，提高工作效率。
+PaYphp 码支付系统提供了丰富的功能，包括支付管理、订单管理、商户管理、统计报表等。本指南将帮助您了解如何使用这些功能，提高工作效率。
 
 ## 功能导航
 
