--- a/markdown/docs/setup.mdx
+++ b/markdown/docs/setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: "安装配置"
-description: "PayPHP码支付系统安装配置指南"
+description: "PaYphp码支付系统安装配置指南"
 date: "2024-01-17"
 category: "开始使用"
 subcategory: "安装配置"
@@ -8,9 +8,9 @@ order: 2
 icon: "⚙️"
 ---
 
-# PayPHP 码支付系统安装配置
+# PaYphp 码支付系统安装配置
 
-本节将详细介绍 PayPHP 码支付系统的安装和配置过程，帮助您快速部署系统。
+本节将详细介绍 PaYphp 码支付系统的安装和配置过程，帮助您快速部署系统。
 
 ## 安装前准备
 
@@ -56,7 +56,7 @@ icon: "⚙️"
 #### 方式一：使用 Composer 安装
 
 ```bash
-composer create-project payphp/payphp your-project-name
+composer create-project PaYphp/PaYphp your-project-name
 ```
 
 #### 方式二：下载安装包
@@ -129,7 +129,7 @@ server {
    DB_CONNECTION=mysql
    DB_HOST=127.0.0.1
    DB_PORT=3306
-   DB_DATABASE=payphp
+   DB_DATABASE=PaYphp
    DB_USERNAME=your_username
    DB_PASSWORD=your_password
    ```
@@ -149,7 +149,7 @@ php artisan migrate
 ### 6. 初始化系统
 
 ```bash
-php artisan payphp:install
+php artisan PaYphp:install
 ```
 
 此命令将引导您完成系统初始化，包括创建管理员账户、配置系统参数等。
